[package]
name = "pineapple"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
libwifi = "0.5.0"
netlink_wi = { version = "0.8.0", features = ["async"] }
pcap = "2.4.0"
radiotap = "1.3.0"
rtnetlink = "0.20.0"
tokio = { version = "1.50.0", features = ["full"] }
